Changes done after first website check.

--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     <br>
     <br>
     <br>
-    <form action="" method="get">
-        <label for="">
+    <form method="get">
+        <label for="random">
             Name:
-            <input type="text">
+            <input type="text" id="random">
         </label>
     </form>
-    <form action="" method="post">
+    <form method="post">
         <fieldset>
             <legend>Do you agree to the terms?</legend>
             <label><input type="radio" name="radio" value="yes" /> Yes</label>
         </fieldset>
     </form>
-    <textarea name="" id="">
+    <textarea name="TestText" id="testTexto">
         This is a test. Place with text.
     </textarea>
     <label for="myColors">Choose a color from this list:</label>
