Fixed icon html link problem.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meeting Minutes</title>
-    <link rel="icon" type="image" href="clockImage2.jpeg">
+    <link rel="icon" href="clockImage2.jpeg" />
 </head>
 <body>
     <header> 
